--- a/package/lean/luci-app-unblockmusic/root/usr/share/unblockmusic/package.json
+++ b/package/lean/luci-app-unblockmusic/root/usr/share/unblockmusic/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "unblockneteasemusic",
-  "version": "0.15.1",
+  "name": "@nondanee/unblockneteasemusic",
+  "version": "0.17.0",
   "description": "Revive unavailable songs for Netease Cloud Music",
   "main": "provider/match.js",
   "bin": {
-    "UnblockNeteaseMusic": "app.js"
+    "unblockneteasemusic": "app.js"
   },
   "scripts": {
     "pkg": "pkg . --out-path=dist/"
@@ -21,5 +21,8 @@
   },
   "author": "nondanee",
   "license": "MIT",
-  "dependencies": {}
+  "dependencies": {},
+  "publishConfig": {
+    "access": "public"
+  }
 }
