toolchain: ARM: Fix toolchain compilation for gcc 8.x

--- a/package/lean/qt5/Makefile
+++ b/package/lean/qt5/Makefile
@@ -114,7 +114,7 @@ define Build/Configure
 			-no-opengl \
 			-no-directfb \
 			-no-xcb \
-			-openssl-runtime \
+			-no-openssl \
 			-qt-zlib \
 			-qt-pcre \
 			-qt-freetype \
