luci-app-ssr-plus: custom AD block URL (#3092)
* v2ray:Add GOPROXY proxy

* luci-app-ssr-plus:Custom AD URL

* luci-app-ssr-plus:Fix bug & optimize

--- a/package/lean/v2ray/Config.in
+++ b/package/lean/v2ray/Config.in
@@ -1,6 +1,10 @@
 menu "V2Ray Configuration"
 	depends on PACKAGE_v2ray
 
+config V2RAY_COMPRESS_GOPROXY
+	bool "Compiling with GOPROXY proxy"
+	default n
+
 choice
 	prompt "JSON Config Support"
 	default V2RAY_JSON_INTERNAL
