--- a/package/lean/luci-app-unblockmusic/Makefile
+++ b/package/lean/luci-app-unblockmusic/Makefile
@@ -8,12 +8,12 @@ include $(TOPDIR)/rules.mk
 
 PKG_NAME:=luci-app-unblockmusic
 PKG_VERSION:=2.3.1
-PKG_RELEASE:=3
+PKG_RELEASE:=5
 
 PKG_LICENSE:=Apache-2.0
 
 LUCI_TITLE:=LuCI support for Unblock NeteaseCloudMusic
-LUCI_DEPENDS:=+UnblockNeteaseMusic +dnsmasq-full +ipset
+LUCI_DEPENDS:=+UnblockNeteaseMusic +dnsmasq-full +ipset +wget
 LUCI_PKGARCH:=all
 
 PKG_MAINTAINER:=lean
